frontend/test/should_fail/retype_104.grg
using retype_model_002;

// forbidden, because of ambiguous retyping statements

rule r {
	pattern {
		a:Node;
		b:Node;
		
		a -x:TYPE1-> b;
	}
	replace {
		a -y:TYPE1<x>-> b;
		a -z:TYPE2<x>-> b;
	}
}

